# us_visa_prediction_DVC_and_mlflow

./: .env  .gitignore  app.py  data_dump.py  demo.py  dvc.yaml  params.yaml  pyproject.toml  report.yaml  setup.py  template.py
Data/: .gitignore  Visadataset.csv.dvc
Notebook/: 1_EDA_US_visa.ipynb  2_Feature_Engineering_and_Model_Training.ipynb  boston_data_drift_report.html  data_drift_demo_evidently.ipynb
Notebook/catboost_info/: catboost_training.json  time_left.tsv
Notebook/catboost_info/learn/: events.out.tfevents
us_visa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
us_visa/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
us_visa/configuration/: configuration.py
us_visa/constants/: __init__.py
us_visa/data_access/: usvisa_data.py
us_visa/entity/: artifact_entity.py  config_entity.py
us_visa/exception/: __init__.py
us_visa/logger/: __init__.py
us_visa/pipeline/: prediction_pipeline.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  training_pipeline.py
us_visa/utils/: main_utils.py  mlflow.py  optuna_tuner.py
